Added bold math

--- a/latex-poster.tex
+++ b/latex-poster.tex
@@ -194,7 +194,7 @@
 \end{table}
 \begin{table}
   \centering
-    \begin{tabular}{ p{4em} p{12em} p{4em} p{12em} }
+    \begin{tabular}{ p{5em} p{12em} p{5em} p{12em} }
       $ABCdef$ & ABCdef &
       $\frac{a}{b}$ & \textbackslash frac \{a\}\{b\} \\
       $\mathrm{ABCdef}$ & \textbackslash mathrm\{ABCdef\} &
@@ -205,7 +205,7 @@
       $\underbrace{abc}$ & \textbackslash underbrace\{abc\} \\
       $\mathsf{ABCdef}$ & \textbackslash mathsf\{ABCdef\} &
       $\underrightarrow{abc}$ & \textbackslash underrightarrow\{abc\} \\
-
+      $\boldsymbol{ABCdef}$ & \textbackslash boldsymbol\{ABCdef\} \\
       $\mathbb{ABC}$ & \textbackslash mathbb\{ABC\} \\
       $\mathcal{ABC}$ & \textbackslash mathcal\{ABC\} \\
 
